--- a/Mental_Health_Survey.ipynb
+++ b/Mental_Health_Survey.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3617L/6WoIDj5tgTaYjis",
+      "authorship_tag": "ABX9TyPyeWDQcTybLJWLwSRLrTeo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -486,6 +486,44 @@
       ],
       "metadata": {
         "id": "vl7h_EfywAxd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**STREAMLIT APPLICATION**"
+      ],
+      "metadata": {
+        "id": "fd30KH01dkBi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import streamlit as st\n",
+        "\n",
+        "st.title(\"Predicting Depression from Mental Health Survey Data\")\n",
+        "\n",
+        "csv_url = \"https://raw.githubusercontent.com/tayabba-19/Predicting-Depression-from-Mental-Health-Survey-Data-using-Deep-Learning/refs/heads/main/mental_health_survey.csv\"\n",
+        "df = pd.read_csv(csv_url)\n",
+        "\n",
+        "st.success(\"Dataset loaded successfully!\")\n",
+        "st.dataframe(df.head())"
+      ],
+      "metadata": {
+        "id": "NTegEKSMduTq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://au2kssu3qzvcsy6gajjhxj.streamlit.app/"
+      ],
+      "metadata": {
+        "id": "9JUhCjYDd8jy"
       }
     }
   ]
